# snaak_rl_model_based

./: .gitignore  CMakeLists.txt  get_norm_vals.py  load_data.py  model.py  package.xml  train.py
launch/: model_based_test_launch.py
model/: get_norm_vals.py  load_data.py  model.py  test_stats.json  train.py
scripts/: test_model.py
