<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>model_based_test</name>
  <version>0.0.1</version>
  <description>RL Data Collection Main Node</description>
  <maintainer email="bertonoliver50@gmail.com">oberton</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <!-- TODO: add any dependencies here -->
  
  <exec_depend>snaak_manipulation</exec_depend>
  <exec_depend>snaak_weight_read</exec_depend>
  <exec_depend>dynamixel_sdk_examples</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>